namespace/envoy-gateway-system/envoy-gateway/security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authentik-auth-policy
  namespace: envoy-gateway-system
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: sonarr-https-route
      namespace: media
  extAuth:
    http:
      backendRefs:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
          weight: 1
      requestHeadersToBackend:
        - "X-Forwarded-For"
        - "X-Forwarded-Host"
        - "X-Forwarded-Proto"
        - "X-Forwarded-Uri"
        - "X-Envoy-Original-Path"
        - "Cookie"
        - "Authorization"
      headersToBackend:
        - "X-authentik-username"
        - "X-authentik-groups"
        - "X-authentik-entitlements"
        - "X-authentik-email"
        - "X-authentik-name"
        - "X-authentik-uid"
        - "X-authentik-jwt"
        - "X-authentik-meta-jwks"
        - "X-authentik-meta-outpost"
        - "X-authentik-meta-provider"
        - "X-authentik-meta-app"
        - "X-authentik-meta-version"
      uri: "http://ak-outpost-authentik-embedded-outpost.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/envoy"
